# gm_addr_extract

./: .gitignore  Cargo.toml  README.md  gen_header.sh  gmextra.h
.github/workflows/: build.yaml
gm-addr-extract/: Cargo.toml
gm-addr-extract-ffi/: Cargo.toml  cbindgen.toml
gm-addr-extract-ffi/src/: lib.rs
gm-addr-extract-lib/: Cargo.toml
gm-addr-extract-lib/src/patterns/: adrp_ldr_adrp_ldr.rs
gm-addr-extract/src/: main.rs
src/: arg.rs  lib.rs  main.rs
src/patterns/: adrp_adrp_str_str.rs  mod.rs
